--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-community/push-notification-ios": "^1.10.1",
+    "firebase": "^9.9.4",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-native": "0.65.1",
